--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body, html {
 }
 h1, p, a {
 	font-family: 'Roboto', Arial, Helvetica, sans-serif; 
-	color:#fff; 
+	color:black; 
 	margin: 0;
 }
 h1 {
@@ -42,25 +42,40 @@ p {
 }
 
 .mask-bg-color {
-	background-color: #50c7f8;
+	background-color: grey;
 }
 .animated-bg {
-	background-image: url('assets/cart.mp4'); 
+	/* background-image: url('assets/cart.mp4'); 
 	background-position:center;  
 	/* -moz-background-size:cover;
 	-o-background-size:cover;
 	-webkit-background-size:cover; */
-    /* background-size:; */
-    background-repeat: none;
+    /* background-size:;
+    background-repeat: none; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.video {
+    /* display: flex;
+    /* /* justify-self: center;
+    align-self: center;
+    margin: 0 auto; */
 }
 .element-mask {
-	background-color: #fff;
+	background-color: white;
 }
 
+.playbutton{
+    color:#50c7f8;
+    background: none;
+    border: #50c7f8;
+    font-size: 2rem;
+}
 .circle-follow {
 	position :absolute;
 	overflow : hidden;
-	background-color: #000000;
+	background-color: red;
 	width :320px; 
 	height: 320px;
     top:calc( 50% - 160px); 
